tests/negative/test_type_arr_size_not_num.orb
i32['a'] a;

fnc main() {}